--- a/visualization-app/src/App.css
+++ b/visualization-app/src/App.css
@@ -2,17 +2,6 @@
   text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 10vh;
@@ -25,17 +14,19 @@
   padding-left: 5vh;
 }
 
-.App-link {
-  color: #61dafb;
+.App-subheader {
+  font-size: 2em;
+  min-height: 8vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 5vh;
+  margin-bottom: 1vh;
+  padding-left: 5vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-link {
+  color: #61dafb;
 }
 
 .basic-line {
@@ -44,4 +35,8 @@
 
 .basic-grid {
   stroke: #ccc;
+}
+
+div .intended {
+  padding-left: 3em;
 }
