--- a/visualization-app/src/App.css
+++ b/visualization-app/src/App.css
@@ -4,14 +4,18 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  font-size: 2em;
   color: white;
   margin-bottom: 5vh;
+  padding: 0.25em;
   padding-left: 5vh;
+}
+
+.App-header>p {
+  padding-right: 5vh;
+  margin: 0.3em;
 }
 
 .App-subheader {
@@ -39,4 +43,20 @@
 
 div .intended {
   padding-left: 3em;
+}
+
+.Header-button {
+  background-color: #282c34;
+  font-size: 1em;
+  color: white;
+  padding-right: 1em;
+  padding-left: 1em;
+  border: #757575 1px solid;
+  border-radius: 0.25em;
+  margin-left: 0.25em;
+}
+
+.Header-button:hover {
+  color: #282c34;
+  background-color: white;
 }
