--- a/visualization-app/src/App.css
+++ b/visualization-app/src/App.css
@@ -29,6 +29,17 @@
   padding-left: 5vh;
 }
 
+.App-footer {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: row-reverse;
+  font-size: 1em;
+  color: #636c80;
+  margin-top: 5vh;
+  padding: 2vh;
+  padding-right: 6.5vh;
+}
+
 .App-link {
   color: #61dafb;
 }
