--- a/visualization-app/src/App.css
+++ b/visualization-app/src/App.css
@@ -62,27 +62,26 @@ div .intended {
 
 h1, h2, h3 {
   font-weight: normal;
-  padding-left: 2vh;
 }
 
 h2 {
-  padding-left: 4vh;
+  padding-left: 2vh;
 }
 
 h3 {
-  padding-left: 6vh;
+  padding-left: 4vh;
 }
 
 .Header-button {
   background-color: #282c34;
-  font-size: 1em;
   color: white;
   padding-right: 1em;
   padding-left: 1em;
   border: #757575 1px solid;
   border-radius: 0.25em;
   margin-left: 0.25em;
-  font-size: smaller;
+  font-size: medium;
+  font-weight: lighter;
 }
 
 .Header-button:hover {
@@ -93,4 +92,30 @@ h3 {
 .hoverable path:hover {
   pointer-events: all;
   stroke: #757575;
+}
+
+.fit-row {
+  display: flex;
+  margin: auto;
+  margin-right: 0;
+}
+
+#showGradesButton {
+  min-width: 10em;
+  display: block;
+  border: none;
+  font-family: inherit;
+  font-size: unset;
+  padding: 10px;
+}
+
+svg {
+  width: 97.6%;
+  height: 98%;
+}
+
+.view {
+  width: 90%;
+  margin: auto;
+  padding-right: 2%;
 }
